[gd_scene load_steps=42 format=3 uid="uid://bm6glqenuebbr"]

[ext_resource type="Script" path="res://src/gamemode/bonus_game.gd" id="1_h8rtr"]
[ext_resource type="Shader" path="res://src/base-system/shaders/hit.gdshader" id="1_y4413"]
[ext_resource type="Texture2D" uid="uid://h14bp6b8w6i8" path="res://assets/sprites/Progress_Under.png" id="2_4l5d6"]
[ext_resource type="Texture2D" uid="uid://dif1rjiv3kepy" path="res://assets/sprites/Map_Bonus.png" id="2_uslsn"]
[ext_resource type="Texture2D" uid="uid://nga6shwhgxi5" path="res://assets/sprites/Map_BarLight.png" id="3_6opfd"]
[ext_resource type="Texture2D" uid="uid://mgxmnunxgvxi" path="res://assets/sprites/Progress_Front.png" id="3_q1ndy"]
[ext_resource type="Texture2D" uid="uid://df8a7xriw1acm" path="res://assets/sprites/Progress_Fill.png" id="4_3si7i"]
[ext_resource type="Script" path="res://src/gamemode/ConstantProgressbar.gd" id="5_ujqqc"]
[ext_resource type="AudioStream" uid="uid://cbl54cvxxt3ij" path="res://assets/sound/beep.mp3" id="6_iyf2x"]
[ext_resource type="PackedScene" uid="uid://dffjinparflk0" path="res://src/ui/day.tscn" id="7_apkwh"]
[ext_resource type="Theme" uid="uid://7qw6fd3hy4kc" path="res://theme/theme.tres" id="7_pf076"]
[ext_resource type="Texture2D" uid="uid://b3m7b3wyx4tpw" path="res://assets/sprites/Clock.png" id="9_0l2xr"]
[ext_resource type="Script" path="res://src/Clock.gd" id="10_k1yhr"]
[ext_resource type="Texture2D" uid="uid://bikrg3yecci4h" path="res://assets/sprites/ClockLight.png" id="11_ywop3"]
[ext_resource type="Script" path="res://src/WorkTime.gd" id="12_mtvg5"]
[ext_resource type="AudioStream" uid="uid://bpxm5pscsli23" path="res://assets/sound/鳩時計1.mp3" id="13_b4v56"]
[ext_resource type="PackedScene" uid="uid://df3w35coia1aj" path="res://src/beer.tscn" id="13_d5hkj"]
[ext_resource type="AudioStream" uid="uid://dykrksjnisr7f" path="res://assets/sound/柱時計の鐘.mp3" id="14_kyxqg"]
[ext_resource type="Script" path="res://src/BlinkText.gd" id="15_0deuh"]
[ext_resource type="PackedScene" uid="uid://d4l3bh8sq5hjr" path="res://src/document.tscn" id="15_wdlim"]
[ext_resource type="Shader" path="res://src/gamemode/drunk_camera.gdshader" id="23_aobx4"]
[ext_resource type="Script" path="res://src/ui/ending.gd" id="24_3gklo"]
[ext_resource type="LabelSettings" uid="uid://tpgtuioqqmmp" path="res://theme/title.tres" id="24_m2g75"]
[ext_resource type="Script" path="res://src/DocSpawner.gd" id="25_lm2mi"]
[ext_resource type="Script" path="res://src/delegator.gd" id="25_sdwea"]
[ext_resource type="LabelSettings" uid="uid://bkph6n3e468da" path="res://theme/text_outline.tres" id="26_gc4xk"]
[ext_resource type="PackedScene" uid="uid://cgwassol31f0l" path="res://src/ui/typing_button.tscn" id="27_4ixvh"]
[ext_resource type="Script" path="res://src/WordGenerator.gd" id="27_ng3f4"]
[ext_resource type="Script" path="res://src/KeyReader.gd" id="28_5efhx"]
[ext_resource type="Script" path="res://src/ui/break_button.gd" id="31_mah44"]
[ext_resource type="Script" path="res://src/base-system/effect/EffectRoot.gd" id="32_g7kve"]
[ext_resource type="Script" path="res://src/base-system/effect/Slide.gd" id="33_4fd3s"]
[ext_resource type="Script" path="res://src/base-system/effect/Fade.gd" id="34_12c13"]
[ext_resource type="AudioStream" uid="uid://e82h4pq7oib4" path="res://assets/sound/金額表示.mp3" id="35_ob7ro"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8kwky"]
shader = ExtResource("1_y4413")
shader_parameter/enable = true
shader_parameter/hit_color = Color(0.207843, 0.207843, 0.25098, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hurxu"]
shader = ExtResource("23_aobx4")
shader_parameter/amplitutde = Vector2(0.01, 0.01)
shader_parameter/speed = Vector2(10, 10)
shader_parameter/blur = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_71ux3"]

[sub_resource type="Animation" id="Animation_6pe1c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Desk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Desk/PointLight2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasModulate:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Control/MarginContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DocSpawner:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-200, 34)]
}

[sub_resource type="Animation" id="Animation_e2oqj"]
resource_name = "bar"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Desk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Desk/PointLight2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasModulate:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Control/MarginContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DocSpawner:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-200, 34)]
}

[sub_resource type="Animation" id="Animation_5itub"]
resource_name = "meeting"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Desk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4d0o1"]
_data = {
"RESET": SubResource("Animation_6pe1c"),
"bar": SubResource("Animation_e2oqj"),
"meeting": SubResource("Animation_5itub")
}

[node name="BonusGame" type="Node2D" node_paths=PackedStringArray("progress_bar", "day", "work_time")]
script = ExtResource("1_h8rtr")
progress_bar = NodePath("CanvasLayer/Control/MarginContainer/OverloadProgress")
day = NodePath("CanvasLayer/Control/Day")
work_time = NodePath("Desk/Clock/HBoxContainer/WorkTime")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.470076, 0.470076, 0.470076, 1)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -187.0
offset_top = -114.0
offset_right = 203.0
offset_bottom = 116.0
color = Color(0.929412, 0.894118, 0.854902, 1)

[node name="Desk" type="Sprite2D" parent="."]
texture = ExtResource("2_uslsn")
hframes = 2

[node name="PointLight2D" type="PointLight2D" parent="Desk"]
position = Vector2(0.5, 0.5)
enabled = false
blend_mode = 2
texture = ExtResource("3_6opfd")

[node name="Clock" type="Sprite2D" parent="Desk" node_paths=PackedStringArray("worktime")]
position = Vector2(88, -74)
texture = ExtResource("9_0l2xr")
hframes = 2
script = ExtResource("10_k1yhr")
worktime = NodePath("HBoxContainer/WorkTime")

[node name="ClockLight1" type="PointLight2D" parent="Desk/Clock"]
position = Vector2(-10.5, 2.25806)
blend_mode = 2
texture = ExtResource("11_ywop3")

[node name="ClockLight2" type="PointLight2D" parent="Desk/Clock"]
position = Vector2(-4.5, 2.2)
blend_mode = 2
texture = ExtResource("11_ywop3")

[node name="ClockLight3" type="PointLight2D" parent="Desk/Clock"]
position = Vector2(3.5, 2.25806)
blend_mode = 2
texture = ExtResource("11_ywop3")

[node name="ClockLight4" type="PointLight2D" parent="Desk/Clock"]
position = Vector2(9, 2.25806)
blend_mode = 2
texture = ExtResource("11_ywop3")

[node name="HBoxContainer" type="HBoxContainer" parent="Desk/Clock"]
light_mask = 2
visibility_layer = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -11.5
offset_right = -5.0
offset_bottom = -0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_pf076")
theme_override_constants/separation = 0
alignment = 1

[node name="WorkTime" type="Label" parent="Desk/Clock/HBoxContainer" node_paths=PackedStringArray("timer", "day_end_sound", "overtime_sound")]
layout_mode = 2
theme = ExtResource("7_pf076")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 10
text = "00"
horizontal_alignment = 1
script = ExtResource("12_mtvg5")
end_hour = 12
hour_in_seconds = 5
timer = NodePath("Timer")
day_end_sound = NodePath("End")
overtime_sound = NodePath("Overtime")

[node name="End" type="AudioStreamPlayer" parent="Desk/Clock/HBoxContainer/WorkTime"]
process_mode = 3
stream = ExtResource("13_b4v56")
volume_db = -10.0
bus = &"SFX"

[node name="Overtime" type="AudioStreamPlayer" parent="Desk/Clock/HBoxContainer/WorkTime"]
process_mode = 3
stream = ExtResource("14_kyxqg")
volume_db = -20.0
bus = &"SFX"

[node name="Timer" type="Timer" parent="Desk/Clock/HBoxContainer/WorkTime"]

[node name="MarginContainer" type="MarginContainer" parent="Desk/Clock/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0

[node name="Colon" type="Label" parent="Desk/Clock/HBoxContainer/MarginContainer" node_paths=PackedStringArray("blink_timer")]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = ":"
script = ExtResource("15_0deuh")
blink_timer = NodePath("BlinkTimer")
blink_duration = 0.5

[node name="BlinkTimer" type="Timer" parent="Desk/Clock/HBoxContainer/MarginContainer/Colon"]
one_shot = true

[node name="Minutes" type="Label" parent="Desk/Clock/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 10
text = "00"

[node name="DocSpawner" type="Marker2D" parent="." node_paths=PackedStringArray("word_generator")]
position = Vector2(-200, 34)
script = ExtResource("25_lm2mi")
document_scene = ExtResource("13_d5hkj")
word_generator = NodePath("WordGenerator")
verfical_offset = 5.0
word_type = "AFTERWORK"

[node name="WordGenerator" type="Node" parent="DocSpawner"]
script = ExtResource("27_ng3f4")

[node name="MeetingSpawner" type="Marker2D" parent="." node_paths=PackedStringArray("word_generator")]
position = Vector2(-73, -110)
script = ExtResource("25_lm2mi")
document_scene = ExtResource("15_wdlim")
word_generator = NodePath("WordGenerator")
move_back = true
word_type = "MEETING"
spawn_vertical_offset = 140

[node name="WordGenerator" type="Node" parent="MeetingSpawner"]
script = ExtResource("27_ng3f4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_pf076")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -91.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="OverloadProgress" type="TextureProgressBar" parent="CanvasLayer/Control/MarginContainer" node_paths=PackedStringArray("drunk_overlay")]
material = SubResource("ShaderMaterial_8kwky")
layout_mode = 2
size_flags_horizontal = 8
min_value = -20.0
max_value = 20.0
step = 0.01
fill_mode = 3
texture_under = ExtResource("2_4l5d6")
texture_over = ExtResource("3_q1ndy")
texture_progress = ExtResource("4_3si7i")
script = ExtResource("5_ujqqc")
drunk_overlay = NodePath("../../DrunkOverlay")

[node name="OverloadSound" type="AudioStreamPlayer" parent="CanvasLayer/Control/MarginContainer/OverloadProgress"]
stream = ExtResource("6_iyf2x")
volume_db = -15.0
bus = &"SFX"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/MarginContainer/OverloadProgress"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -0.5
offset_right = -1.0
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="DrunkOverlay" type="ColorRect" parent="CanvasLayer/Control"]
material = SubResource("ShaderMaterial_hurxu")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Day" parent="CanvasLayer/Control" instance=ExtResource("7_apkwh")]
layout_mode = 1
display_time = null

[node name="Ending" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 2
script = ExtResource("24_3gklo")

[node name="Delegator" type="Node" parent="CanvasLayer/Control/Ending"]
script = ExtResource("25_sdwea")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/Ending"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/Ending"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/Ending/CenterContainer"]
custom_minimum_size = Vector2(100, 160)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_71ux3")

[node name="Work" type="MarginContainer" parent="CanvasLayer/Control/Ending/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Ending/CenterContainer/PanelContainer/Work"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CanvasLayer/Control/Ending/CenterContainer/PanelContainer/Work/VBoxContainer"]
layout_mode = 2
text = "closing hour"
label_settings = ExtResource("24_m2g75")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Ending/CenterContainer/PanelContainer/Work/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="DayDelegator" type="Node" parent="CanvasLayer/Control/Ending/CenterContainer/PanelContainer/Work/VBoxContainer/VBoxContainer" node_paths=PackedStringArray("nodes")]
script = ExtResource("25_sdwea")
nodes = [NodePath("../NextDay/NextDayButton"), NodePath("../NextDay/Break")]

[node name="Drunk" type="Label" parent="CanvasLayer/Control/Ending/CenterContainer/PanelContainer/Work/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "DRANK 100 BEER"
label_settings = ExtResource("26_gc4xk")
horizontal_alignment = 1

[node name="Overtime" type="Label" parent="CanvasLayer/Control/Ending/CenterContainer/PanelContainer/Work/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "FULL RECOVERED"
label_settings = ExtResource("26_gc4xk")
horizontal_alignment = 1

[node name="Overtime2" type="Label" parent="CanvasLayer/Control/Ending/CenterContainer/PanelContainer/Work/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Hangover"
label_settings = ExtResource("26_gc4xk")
horizontal_alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/Control/Ending/CenterContainer/PanelContainer/Work/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NextDay" type="HBoxContainer" parent="CanvasLayer/Control/Ending/CenterContainer/PanelContainer/Work/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NextDayButton" parent="CanvasLayer/Control/Ending/CenterContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/NextDay" instance=ExtResource("27_4ixvh")]
layout_mode = 2
word = "Next Day"

[node name="Break" parent="CanvasLayer/Control/Ending/CenterContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/NextDay" instance=ExtResource("27_4ixvh")]
layout_mode = 2
script = ExtResource("31_mah44")
word = "Break"

[node name="EndEffect" type="Node" parent="CanvasLayer/Control/Ending"]
script = ExtResource("32_g7kve")
trans = 10
ease = 1
duration = 0.8

[node name="Slide2" type="Node" parent="CanvasLayer/Control/Ending/EndEffect" node_paths=PackedStringArray("node")]
script = ExtResource("33_4fd3s")
node = NodePath("../../CenterContainer")

[node name="Fade" type="Node" parent="CanvasLayer/Control/Ending/EndEffect" node_paths=PackedStringArray("node")]
script = ExtResource("34_12c13")
node = NodePath("../../ColorRect")

[node name="OpenSound" type="AudioStreamPlayer" parent="CanvasLayer/Control/Ending"]
stream = ExtResource("35_ob7ro")
volume_db = -10.0
bus = &"SFX"

[node name="KeyReader" type="Node" parent="."]
script = ExtResource("28_5efhx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4d0o1")
}
